# teacher_style_identification_base_video

./: README.md  pyproject.toml
src/teacher_style_identification/: __init__.py
src/teacher_style_identification/audio/: __init__.py  data.py  evaluation.py  features.py  recognizer.py  utils.py
tests/: test_audio_pipeline.py
