[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teacher-style-identification"
version = "0.1.0"
description = "Audio and video analysis toolkit for teacher style identification"
authors = [{name = "Research Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
